[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/images/minecraft Mario gumba zombie clone.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 2 )

[sub_resource type="Animation" id=3]
resource_name = "Walking"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Enemy/enemy:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1, 0 ]
}

[node name="Enemy" type="KinematicBody2D"]
position = Vector2( 0, -8 )
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="StompDetector" type="Area2D" parent="."]
position = Vector2( 0, -3 )
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompDetector"]
position = Vector2( 0, -6 )
shape = SubResource( 2 )

[node name="enemy" type="Sprite" parent="."]
position = Vector2( 0.00991344, -0.0149803 )
texture = ExtResource( 1 )
hframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Walking = SubResource( 3 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 0, -0.5 )
scale = Vector2( 0.427475, 0.75 )
physics_process_parent = true
[connection signal="area_entered" from="StompDetector" to="." method="_on_StompDetector_area_entered"]
[connection signal="body_entered" from="StompDetector" to="." method="_on_StompDetector_body_entered"]
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
